[project]
name = "open-api-hackathon-endpoints"
version = "0.1.0"
description = "FastAPI endpoints for Instagram image URLs and other functionality"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.2",
    "uvicorn>=0.31.1",
    "pydantic>=2.9.2",
    "loguru>=0.7.2",
    "httpx>=0.27.2",
    "aiohttp (>=3.11.18,<4.0.0)",
    "openai-agents (>=0.0.13,<0.0.14)",
    "openai (>=1.76.0,<2.0.0)",
    "instaloader>=4.14.1",
    "apify-client>=1.9.4",
    "langchain-core>=0.3.56",
    "langchain-openai>=0.3.14",
    "langchain-community>=0.3.22",
    "beautifulsoup4>=4.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
